FB-64 : Add Support To Obtain Event List for Venue
Endpoint added that lets a venue to obtain a list of events it has access to.
This will allow them to then query the attendee API.
Set connection pool size to 20.
Charged report CRON expressions.
