# swagger.yml
@@ -168,6 +168,36 @@ paths:
         404:
           description: Event not found by ID.
           content: {}
+  /event/{event_id}/attendees:
+    get:
+      tags:
+        - event
+      summary: Obtains ticket metadata and user info for the event.
+      description: Obtains all ticket metadata that has been issued for the event.
+      operationId: getAttendeesForEvent
+      security:
+        - OAuth2:
+            - write:venue_redeem
+      parameters:
+        - name: event_id
+          in: path
+          description: The event ID stored in the Foria database.
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Attendee'
+        404:
+          description: Event not found by ID.
+          content: {}
   /ticket/{ticket_id}:
     get:
       tags:
@@ -534,6 +564,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/BaseApiModel'
   /venue:
+    get:
+      tags:
+        - venue
+      summary: Obtains data for all authorized venues.
+      operationId: getAllVenues
+      responses:
+        200:
+          description: Returns metadata for each venue the user has access to along with event info.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Venue'
     post:
       tags:
         - venue
@@ -681,6 +725,23 @@ components:
           minLength: 3
           type: string
           example: USA
+    Attendee:
+      type: object
+      properties:
+        ticket_id:
+          type: string
+          format: uuid
+        ticket:
+          $ref: '#/components/schemas/TicketTypeConfig'
+        user_id:
+          type: string
+          format: uuid
+        first_name:
+          type: string
+          example: John
+        last_name:
+          type: string
+          example: Doe
     CancelEvent:
       type: object
       properties:
@@ -889,6 +950,10 @@ components:
           example: "5555555555"
         address:
           $ref: '#/components/schemas/Address'
+        events:
+          type: array
+          items:
+            $ref: '#/components/schemas/Event'
     BaseApiModel:
       type: object
       properties:
@@ -1029,5 +1094,5 @@ components:
             write:event: Allows POST access to event endpoints.
             write:event_cancel: Special permission to cancel events.
             write:venue: Allows POST access to venue endpoints.
-            write:redeem: Allows tickets to be scanned.
+            write:redeem: Allows tickets to be scanned and users redeemed manually.
             write:register: Allows user to be created in Foria system.
